--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/dev_app?useSSL=false&serverTimezone=UTC
     username: root
-    password: root
+    password: ${DB_PWD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 #    hikari:
 #      maximum-pool-size: 10
